test/Fail/Issue308b.err
Issue308b.agda:6.18: error: [ParseError]
Malformed syntax declaration: syntax must use holes exactly once
